--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">SocialSport</string>
     <string name="error_inicio_sesion">Lo sentimos, ha ocurrido un error</string>
     <string name="facebook_app_id">1069621269850499</string>
+    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
